# coding-2021

./: LICENSE  README.md
C++/A Complete Guide to Programming in C++/: CMakeLists.txt
C++/A Complete Guide to Programming in C++/C1/: Exercise_1.cpp  Exercise_2.cpp  Exercise_3.cpp
C++/A Complete Guide to Programming in C++/C2/: Exercise_1.cpp  Exercise_2.cpp  Exercise_3.cpp  Exercise_4.cpp  Sample_1.cpp  Sample_2.cpp  Sample_3.cpp  Sample_4.cpp  Sample_5.cpp
C++/A Complete Guide to Programming in C++/C3/: Exercise_1.cpp  Exercise_2.cpp  Exercise_3.cpp  Sample_1.cpp  Sample_2.cpp  Sample_3.cpp  SeedList.cpp
C++/Make/: Makefile  main.cpp  message.cpp
C++/Make/src/: main.cpp  message.h
C++/OpenGL_Learnopengl.com/001_Setup/: gltest.cpp
C++/Project Euler/001_Multiples of 3 or 5/: CMakeLists.txt  MultiplesOfThreeOrFive.cpp
C++/freeCodeCamp.org_C++ Tutorial for Beginners/: Makefile  README.md
C++/freeCodeCamp.org_Dynamic Programming/: CMakeLists.txt
C++/freeCodeCamp.org_Dynamic Programming/001_fib(n)/: FibN.cpp
CMake/001_Installing on Linux/: README.md
CMake/002_Running CMake/: README.md
CMake/002_Running CMake/how-to-make-cmake-good-0b/: CMakeLists.txt
CMake/005_CMake in Visual Studio Code/: README.md
CMake/007_Adding a Library/: CMakeLists.txt  hello.hpp  main.cpp
Python/001_OOP_Basics/: __main__.py
Python/001_OOP_Basics/UML/: Diagram1.dia
Python/002_OOP Basics/001_Hello World/: HelloWorld.py
Python/002_OOP Basics/002_Triangle/: Triangle.py
Python/002_OOP Basics/003_Variables/: Variables.py
Python/003_OOP_Basics/: class.py
(+78 files in other folders)
