cmake_minimum_required(VERSION 3.12)
project(A_Complete_Guide_to_Programming_in_C++ VERSION 1.0.0)

add_executable(C1_E1 C1/Exercise_1.cpp)
add_executable(C1_E2 C1/Exercise_2.cpp)
add_executable(C1_E3 C1/Exercise_3.cpp)

add_executable(C2_S1 C2/Sample_1.cpp)
add_executable(C2_S2 C2/Sample_2.cpp)
add_executable(C2_S3 C2/Sample_3.cpp)
add_executable(C2_S4 C2/Sample_4.cpp)
add_executable(C2_S5 C2/Sample_5.cpp)
add_executable(C2_E1 C2/Exercise_1.cpp)
add_executable(C2_E2 C2/Exercise_2.cpp)
add_executable(C2_E3 C2/Exercise_3.cpp)
add_executable(C2_E4 C2/Exercise_4.cpp)

add_executable(C3_S1 C3/Sample_1.cpp)
add_executable(C3_S2 C3/Sample_2.cpp)
add_executable(C3_S3 C3/Sample_3.cpp)
add_executable(C3_E1 C3/Exercise_1.cpp)
add_executable(C3_E2 C3/Exercise_2.cpp)
add_executable(C3_E3 C3/Exercise_3.cpp)
add_executable(C3_SeedList C3/SeedList.cpp)